[package]
name = "kochi-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win32-error = "0.9.0"
dns-lookup = "1.0.8"
clap = { version = "4.2.1", features = ["derive", "cargo"] }

[dependencies.windows]
version = "0.48"
features = [    
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Foundation",
]
