[package]
name = "kochi-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = "0.61.2"
win32-error = "0.9.0"
dns-lookup = "3.0.1"
log = "0.4.0"
env_logger = "0.11.8"
clap = { version = "4.5.54", features = ["derive", "cargo"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_NetworkManagement",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_IO",
    "Win32_Foundation",
]
